--- a/Code/WormDataImport.Rmd
+++ b/Code/WormDataImport.Rmd
@@ -105,7 +105,14 @@ PhysChem |>
   facet_grid(rows = vars(Treatment)) +
   theme_bw()
 ```
-
+```{r colony_explore}
+PhysChem |>
+  ggplot() +
+  geom_histogram(aes(Colony_Type)) +
+  facet_grid(rows = vars(Treatment)) +
+  theme_bw()
+```
+This graph shows us the amount of times specefic colonies appeared on diffrent plate (we had a hard time anylizing 5 because of the fungus)
 ```{r Shape_explore}
 PhysChem |>
   filter(Treatment != 5) |>
@@ -114,14 +121,65 @@ PhysChem |>
   facet_grid(rows = vars(Treatment)) +
   theme_bw()
 ```
-
+This graph shows us
 
 ```{r Size_explore}
 PhysChem |>
-  filter(Treatment != 5) |>
+    filter(Treatment != 5) |>
   ggplot() +
   geom_histogram(aes(Size_um)) +
   facet_grid(rows = vars(Treatment), cols = vars(Shape)) +
+  theme_bw()
+```
+```{r}
+PhysChem |>
+  ggplot() +
+  geom_histogram(aes(Size_um)) +
+  facet_grid(rows = vars(Treatment)) +
+  theme_bw()
+```
+```{r}
+PhysChem |>
+  ggplot() +
+  geom_histogram(aes(Plate_Colony)) +
+  facet_grid(rows = vars(Treatment)) +
+  theme_bw()
+```
+This graph shows how many colonies were taken from each plate, and how many bacteria types were in each colony
+
+```{r}
+PhysChem |>
+  ggplot() +
+  geom_histogram(aes(Gram)) +
+  facet_grid(rows = vars(Treatment), cols = vars(Shape)) +
+  theme_bw()
+```
+```{r}
+PhysChem |>
+  ggplot() +
+  geom_histogram(aes(Gram)) +
+  facet_grid(rows = vars(Treatment)) +
+  theme_bw()
+```
+```{r}
+PhysChem |>
+  ggplot() +
+  geom_histogram(aes(Gram)) +
+  facet_grid(rows = vars(Treatment), cols = vars(Colony_Type)) +
+  theme_bw()
+```
+This graph shows us the different gram stains across colonies in the treatment types, which let us see if the colonoes have consistent gram types across treatments. If they don't, they were likely different colonies. 
+
+This next section is loking at the biodiversity of the worm pellets. (PhysChem2) We overall have lestt infprmation for shis, but puting the graphs side by side during a presentation could be helpful
+```{r}
+PhysChem2 <- read_sheet(googlesheet_url, sheet = "PhysChem2")
+```
+Colony type per treatment is really the only thing we can do here, see data dictionary for description
+```{r}
+PhysChem2 |>
+  ggplot() +
+  geom_histogram(aes(Colony_Type)) +
+  facet_grid(rows = vars(Treatment)) +
   theme_bw()
 ```
 
