--- a/Code/WormDataImport.Rmd
+++ b/Code/WormDataImport.Rmd
@@ -98,17 +98,18 @@ PhysChemP <- read_sheet(googlesheet_url, sheet = "PhysChemP")
 
 # Analysis the biodiversities of the different colonies within the treatments
 
-
-```{r methods, fig.cap = "Worm Composting Method Setup.", out.height="800pt", out.width="100%", echo = FALSE}
+```{r methods set up, fig.cap = "Worm Composting Method Setup.", out.height="800pt", out.width="100%", echo = FALSE}
 
 knitr::include_graphics(file.path("..", "Data", "RawData", "Method_Set_Up.png"))
 ```
 
 
-```{r methods overall, fig.cap = "Worm Composting Method Setup.", out.height="800pt", out.width="100%", echo = FALSE}
+```{r methods overall, fig.cap = "Worm Composting Experiment Process.", out.height="800pt", out.width="100%", echo = FALSE}
 
 knitr::include_graphics(file.path("..", "Data", "RawData", "Method_Overall_Set_Up.png"))
 ```
+Figure 1. Schematic of vermicast culturing process for worm pellet liquid output. colony analysis of colonies using microscopy and gram-staining. Created using BioRender.com.
+
 
 ```{r analysis, fig.cap = "Gram Stain.", out.height="800pt", out.width="100%", echo = FALSE}
 
@@ -127,11 +128,11 @@ PhysChemL |>
     title = "Colony Type Across Treatments in Compost Liquid"
   )
 ```
+Figure 4. Identification of colony types for vermicast liquid of experimental groups 1-4 from microscopy observations. The plot was created using R software.
 
+Treatment 5 was an outlier, as it had a fungus covering most of the colonies, making them inaccessible. A secondary fgures excluding it was created to better visualize the similarities and differences of bacterial colony biodivesrsity between treatments. 
 
-Treatment 5 was an outlier, as it had a fungus covering most of the colonies, making them inaccessible. A secondary fgures excluding it was created to better visualize the similarities and diffrences of bacterial colony biodivesrsity between treatments. 
-
-## biodivesity of the vermicast liquid output, removing the outlier
+## Biodivesity of the vermicast liquid output, removing the outlier
 ```{r colony_explore_filter_treatment5}
 PhysChemL |>
   filter(Treatment != 5) |>
@@ -146,7 +147,7 @@ PhysChemL |>
 
 ## Comparasion of Vermicast liquid output and Vermicast solids Output
 
-```{r ColonyType_explore}}
+```{r ColonyType_explore}
 PhysChemP |>
   ggplot() +
   geom_histogram(aes(Colony_Type),fill = "#ef926e" ) +
@@ -182,14 +183,15 @@ ggplot(PhysChem_combined) +
     fill = "Figure"
   )
 ```
+Figure 3. Identification of colony types for pellet and vermicast liquid of experimental groups 1-5 from microscopy observations. The plot was created using R software.
 
-After the initial realization that there was less biodiversuty in bacterial colonies between treatments than the liquid, it was determined to be beneficial to compare the results between treatments. This graphs supports that there is more biodiversity in colonies from the liquid of each treatment than from the solid vermicast. 
+After the initial realization that there was less biodiversity in bacterial colonies between treatments than the liquid, it was determined to be beneficial to compare the results between treatments. This graphs supports that there is more biodiversity in colonies from the liquid of each treatment than from the solid vermicast. 
 This suggests that the microbial biodiversity from vermicast systems is nt deriving from the gut of the worm.
 
 
 # Analysis of bacterial colonies using microscopy
 
-To futher determine diffrences between bacteria types, microscopy was used. This helped t determine wether colonies that had similar appearance were actually the same bacteria through analysis of shape and gram-staining.
+To further determine differences between bacteria types, microscopy was used. This helped to determine wheather colonies that had similar appearance were actually the same bacteria through analysis of shape and gram-staining.
 
 ## Analysis of bacterial shape
 
@@ -207,7 +209,6 @@ PhysChemL |>
 
 
 ## Analysis of the diffrent shapes under the microscopes, with removal of the outlier
-
 
 ```{r Shape_explore}
 PhysChemL |>
@@ -291,9 +292,11 @@ PhysChemL |>
     title = "Colony Gram Across Treatments and Colony Types of Compost Liquid"
   )
 ```
-This graph shows us the different gram stains across colonies in the treatment types, which let us see if the colonoes have consistent gram types across treatments. If they don't, they were likely different colonies. 
+Figure 6. Identification of gram staining (0 = negative, 1 =positive) for the different colony types for vermicast liquid of experimental groups 1-5. The plot was created using R software.
 
-This next section is loking at the biodiversity of the worm pellets. (PhysChem2) We overall have lestt infprmation for shis, but puting the graphs side by side during a presentation could be helpful
+This graph shows us the different gram stains across colonies in the treatment types, which let us see if the colonies have consistent gram types across treatments. If they don't, they were likely different colonies. 
+
+This next section is looking at the biodiversity of the worm pellets. (PhysChem2) We overall have lestt infprmation for this, but putting the graphs side by side during a presentation could be helpful
 
 Colony type per treatment is really the only thing we can do here, see data dictionary for description
 ```{r ColonyType_explore}
